<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.archrahkshi.moviedatabase.ui.feed.FeedFragment"
        android:label="@string/home"
        tools:layout="@layout/feed_fragment" />

    <fragment
        android:id="@+id/flow_step_one_dest"
        android:name="com.archrahkshi.moviedatabase.ui.movie_details.MovieDetailsFragment"
        tools:layout="@layout/movie_details_fragment">

        <argument
            android:name="flowStepNumber"
            android:defaultValue="1"
            app:argType="integer" />

        <action
            android:id="@+id/next_action"
            app:destination="@+id/flow_step_two_dest" />
    </fragment>

    <fragment
        android:id="@+id/flow_step_two_dest"
        android:name="com.archrahkshi.moviedatabase.ui.movie_details.MovieDetailsFragment"
        tools:layout="@layout/movie_details_fragment">

        <argument
            android:name="flowStepNumber"
            android:defaultValue="2"
            app:argType="integer" />

        <action
            android:id="@+id/next_action"
            app:popUpTo="@id/home_dest" />
    </fragment>

    <fragment
        android:id="@+id/tv_shows_dest"
        android:name="com.archrahkshi.moviedatabase.ui.tvshows.TvShowsFragment"
        android:label="@string/tv_shows"
        tools:layout="@layout/tv_shows_fragment">

        <argument
            android:name="myarg"
            android:defaultValue="Android!" />
    </fragment>

    <fragment
        android:id="@+id/movie_details_fragment"
        android:name="com.archrahkshi.moviedatabase.ui.movie_details.MovieDetailsFragment"
        android:label="Movie details"
        tools:layout="@layout/movie_details_fragment" />

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.archrahkshi.moviedatabase.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/search_dest"
        android:name="com.archrahkshi.moviedatabase.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/tv_show_details_fragment"
        android:name="com.archrahkshi.moviedatabase.ui.tvshows.TvShowDetailsFragment"
        android:label="TV show details"
        tools:layout="@layout/tv_show_details_fragment" />
</navigation>
