<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
    tools:context="com.archrahkshi.moviedatabase.ui.moviedetails.MovieDetailsFragment">

    <ImageView
        android:id="@+id/movieBackdrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backdrop_height"
        android:contentDescription="@string/movie_backdrop"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        tools:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/movieDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="320dp"
            android:background="@color/blueDark"
            android:paddingTop="@dimen/material_margin_normal"
            android:paddingBottom="@dimen/material_margin_normal">

            <TextView
                android:id="@+id/movieTitleDetailed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/movieLike"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="The Grand Budapest Hotel" />

            <CheckBox
                android:id="@+id/movieLike"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/material_margin_small"
                android:button="@drawable/like_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movieRatingDetailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                android:layout_marginTop="@dimen/material_margin_small"
                android:gravity="center_vertical"
                android:textColor="@color/grey"
                app:drawableStartCompat="@drawable/baseline_star_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieTitleDetailed"
                tools:text="IMDb 9.1" />

            <TextView
                android:id="@+id/movieDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                android:layout_marginTop="@dimen/material_margin_small"
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieRatingDetailed"
                tools:text="In a cemetery in the former nation of Zubrowka, a woman visits the shrine of a renowned writer, known simply as 'Author', reading his most-cherished book: The Grand Budapest Hotel. The book, written in 1985, recounts the 1968 vacation of the young writer at the once-grand, then-drab hotel. There, he meets its owner, Zero Moustafa, who tells his rags to riches story at dinner." />

            <TextView
                android:id="@+id/movieCreditsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                android:layout_marginTop="@dimen/material_margin_small"
                android:text="@string/credits"
                android:textColor="@color/white"
                android:textSize="@dimen/subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieCredits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_tiny"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="@dimen/material_margin_normal"
                android:paddingEnd="@dimen/material_margin_normal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieCreditsHeader"
                tools:itemCount="10"
                tools:listitem="@layout/actor_item" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/material_margin_normal"
                android:layout_marginTop="@dimen/material_margin_small"
                android:layout_marginEnd="@dimen/material_margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieCredits">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/studio"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movieStudio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/material_margin_small"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/grey"
                        tools:text="20th Century Fox" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/material_margin_tiny">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movieGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/material_margin_small"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/grey"
                        tools:text="Drama" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/material_margin_tiny">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movieYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/material_margin_small"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/grey"
                        tools:text="2076" />
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/progress_bar" />
</FrameLayout>
